--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ title: Welcome Page
   <!-- Header -->
   <header style="text-align: center; margin-bottom: 2rem;">
     <h1>Marisa Varela Portfolio</h1>
-    <p><em>A showcase of research, writing, and projects in intercultural communication, rhetoric, and digital literacy.</em></p>
+    <p><em>A showcase of research, writing, and projects.</em></p>
   </header>
 
   <!-- Intro / Overview -->
   <section style="margin-bottom: 2rem;">
     <p>
-      Welcome to my portfolio! Here, you can explore my work across several categories of writing and research. Click the links below to navigate to each section:
+      Welcome to my portfolio! Click the links below to navigate to each section:
     </p>
   </section>
 
