--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Welcome Page
   <section style="margin-bottom: 2rem;">
     <h2>Portfolio Sections</h2>
     <ul>
-      <li><a href="{{ '/glossary.html' | relative_url }}">Glossary</a> — A collection communication and technical writing.</li>
+      <li><a href="{{ '/glossary.html' | relative_url }}">Glossary</a> — communication and technical writing.</li>
       <li><a href="{{ '/cultureandtranslation.html' | relative_url }}">Learning About Cultures and Translation</a> — Essays and projects.</li>
       <li><a href="{{ '/digitalliteracyandrhetoric.html' | relative_url }}">Digital Literacy and Rhetoric</a> — Blank framework. </li>
       <li><a href="{{ '/rhetoric.html' | relative_url }}">Rhetoric</a> — Blank framework.</li>
@@ -45,10 +45,7 @@ title: Welcome Page
     <h2>How to Customize This Page</h2>
     <ul>
       <li><strong>Page title:</strong> Change the <code>title</code> in the front matter at the top of this file.</li>
-      <li><strong>Header text:</strong> Replace your name and description in the <code>&lt;header&gt;</code> block.</li>
-      <li><strong>Professional photo:</strong> Replace <code>professional_photo.jpg</code> with your own photo in <code>assets/images</code>.</li>
       <li><strong>Portfolio links:</strong> Add or remove <code>&lt;li&gt;</code> items in the "Portfolio Sections" list as you create new pages.</li>
-      <li><strong>Section descriptions:</strong> Update the text under each link to explain what users will find.</li>
     </ul>
   </section>
 
