--- a/workcited.html
+++ b/workcited.html
@@ -19,7 +19,7 @@ title: PAGE TITLE HERE
 
   <!-- Page Content -->
   <section>
-    <p>This is a placeholder for content. Replace this text with your portfolio writing, essays, projects, or research notes.</p>
+    <p>This is a placeholder for content.</p>
   </section>
 
   <!-- Footer -->
