--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@ title: Welcome Page
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
 
   <!-- Header -->
-  <header style="text-align: center; margin-bottom: 2rem;">
+  <header style="text-align: center; margin-bottom: 1rem;">
     <h1>Marisa Varela Portfolio</h1>
     <p><em>A showcase of research, writing, and projects.</em></p>
   </header>
 
-  <!-- About Section -->
+  <!-- Intro Text (formerly above the About section) -->
+  <section style="text-align: center; margin-bottom: 2rem;">
+    <p>
+      Welcome to my portfolio. Here you’ll find curated writing samples,
+      research projects, and academic work across culture, rhetoric, and digital literacy.
+    </p>
+  </section>
+
+  <!-- About Me Section (now placed here) -->
   <section style="text-align: center; margin-bottom: 2.5rem;">
     <h2>About Me</h2>
     <img src="{{ '/assets/images/professional_photo.jpg' | relative_url }}" 
@@ -61,12 +69,12 @@ title: Welcome Page
     </ul>
   </section>
 
-  <!-- How to Edit / Customize -->
+  <!-- Customization Section -->
   <section style="background-color: #f8f8f8; padding: 1.5rem; border-radius: 8px;">
     <h2>How to Customize This Page</h2>
     <ul>
       <li><strong>Page title:</strong> Change the <code>title</code> in the front matter.</li>
-      <li><strong>Portfolio links:</strong> Edit the list above.</li>
+      <li><strong>Portfolio links:</strong> Edit the centered list above.</li>
     </ul>
   </section>
 
