--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ title: Welcome Page
 
   <!-- Header -->
   <header style="text-align: center; margin-bottom: 1rem;">
-    <h1>Marisa Varela Portfolio</h1>
-    <p><em>A showcase of research, writing, and projects.</em></p>
+    <h1>Marisa Varela</h1>
   </header>
 
   <!-- Intro Text (formerly above the About section) -->
