--- a/index.html
+++ b/index.html
@@ -29,41 +29,35 @@ title: Welcome Page
 
   <!-- Centered Portfolio Links -->
   <section style="margin-bottom: 3rem; text-align: center;">
-    <h2>Portfolio Sections</h2>
     <ul style="list-style: none; padding: 0; margin-top: 1rem; line-height: 2;">
       <li>
         <a href="{{ '/glossary.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
-          Glossary
+          Resume
         </a><br>
-        <small>Communication and technical writing.</small>
       </li>
 
       <li>
         <a href="{{ '/cultureandtranslation.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
-          Learning About Cultures and Translation
+          Writing Samples
         </a><br>
-        <small>Essays and projects.</small>
       </li>
 
       <li>
         <a href="{{ '/digitalliteracyandrhetoric.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
-          Digital Literacy and Rhetoric
+          Academic Writing
         </a><br>
-        <small>Blank framework.</small>
       </li>
 
       <li>
         <a href="{{ '/rhetoric.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
-          Rhetoric
+          Professional / Published Works
         </a><br>
-        <small>Blank framework.</small>
       </li>
 
       <li>
         <a href="{{ '/workcited.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
-          Works Cited
+          Infographics
         </a><br>
-        <small>Blank framework.</small>
       </li>
     </ul>
   </section>
