--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@ title: Welcome Page
 
   <!-- Intro Text (formerly above the About section) -->
   <section style="text-align: center; margin-bottom: 2rem;">
-    <p>
-      Welcome to my portfolio. Here you’ll find curated writing samples,
-      research projects, and academic work across culture, rhetoric, and digital literacy.
-    </p>
   </section>
 
   <!-- About Me Section (now placed here) -->
@@ -24,7 +20,7 @@ title: Welcome Page
     <img src="{{ '/assets/images/professional_photo.jpg' | relative_url }}" 
          alt="Marisa Varela" 
          style="width:200px; height:auto; border-radius:50%; box-shadow: 0 0 10px rgba(0,0,0,0.2); margin-top: 1rem;">
-    <p style="margin-top: 1rem;">Brief description about yourself.</p>
+    <p style="margin-top: 1rem;">About Section</p>
   </section>
 
   <!-- Centered Portfolio Links -->
