--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Welcome Page
   <section style="margin-bottom: 3rem; text-align: center;">
     <ul style="list-style: none; padding: 0; margin-top: 1rem; line-height: 2;">
       <li>
-        <a href="{{ '/glossary.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
+        <a href="{{ '/resume.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
           Resume
         </a><br>
       </li>
