--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: Welcome Page
       </li>
 
       <li>
-        <a href="{{ '/cultureandtranslation.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
+        <a href="{{ '/writing Samples.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
           Writing Samples
         </a><br>
       </li>
