--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Welcome Page
       </li>
 
       <li>
-        <a href="{{ '/digitalliteracyandrhetoric.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
+        <a href="{{ '/academicWriting.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
           Academic Writing
         </a><br>
       </li>
