--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Welcome Page
       </li>
 
       <li>
-        <a href="{{ '/rhetoric.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
+        <a href="{{ '/publishedWorks.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
           Professional / Published Works
         </a><br>
       </li>
