--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ title: Welcome Page
       </li>
 
       <li>
-        <a href="{{ '/workcited.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
+        <a href="{{ '/infographics.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
           Infographics
         </a><br>
       </li>
