--- a/academicWriting.html
+++ b/academicWriting.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: PAGE TITLE HERE
+title: Academic Writing
 ---
 
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
