--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Welcome Page
   <!-- About Me Section -->
   <section style="text-align: center; margin-bottom: 3rem;">
     <h2>About Me</h2>
-    <img src="{{ '/assets/images/professional_photo.jpg' | relative_url }}" 
+    <img src="{{ '/assets/images/ProfilePicture.jpeg' | relative_url }}" 
          alt="Marisa Varela" 
          style="width:200px; height:auto; border-radius:50%; box-shadow: 0 0 10px rgba(0,0,0,0.2); margin-top: 1rem;">
     <p style="margin-top: 1rem;">About Section</p>
