--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@ title: Welcome Page
        alt="Marisa Varela" 
        style="
          width: 220px;
-         height: 220px;  
-         object-fit: cover;     
-         border-radius: 50%;   
+         height: 220px;
+         object-fit: cover;
+         object-position: center -20px; /* Move image up to reveal more lower area */
+         border-radius: 50%;
          box-shadow: 0 0 12px rgba(0,0,0,0.25);
          margin-top: 1rem;
        ">
