--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@ title: Welcome Page
     <h1>Marisa Varela</h1>
   </header>
 
-  <!-- About Me Section -->
-<section style="text-align: center; margin-bottom: 3rem;">
+ <section style="margin-bottom: 3rem; text-align: left;">
   <img src="{{ '/assets/images/ProfilePicture.jpeg' | relative_url }}" 
        alt="Marisa Varela" 
        style="
          width: 220px;
          height: 220px;
          object-fit: cover;
-         object-position: center -20px; /* Move image up to reveal more lower area */
+         object-position: center -20px;
          border-radius: 50%;
+         float: left;
+         margin-right: 1.5rem;
          box-shadow: 0 0 12px rgba(0,0,0,0.25);
-         margin-top: 1rem;
        ">
   <p style="margin-top: 1rem;">About Section</p>
 </section>
+
 
   <!-- Resume Section -->
   <section style="text-align: center; margin-bottom: 4rem;">
