--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@ title: Welcome Page
 
 
   <!-- Resume Section -->
-  <section style="text-align: center; margin-bottom: 4rem;">
-    <h2>Resume</h2>
-    <ul style="list-style: none; padding: 0; margin-top: 1rem; line-height: 2;">
-      <li>
-        <a href="{{ '/resume.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
-          View Resume
-        </a>
-      </li>
-    </ul>
-  </section>
+<section style="text-align: center; margin-top: 6rem; margin-bottom: 4rem;">
+  <h2>Resume</h2>
+  <ul style="list-style: none; padding: 0; margin-top: 1rem; line-height: 2;">
+    <li>
+      <a href="{{ '/resume.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
+        View Resume
+      </a>
+    </li>
+  </ul>
+</section>
+
 
   <!-- Writing Samples Section -->
   <section style="text-align: center; margin-bottom: 4rem; margin-top: 2rem;">
