--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Welcome Page
+title: Home Page
 ---
 
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
 
   <!-- Header -->
   <header style="text-align: center; margin-bottom: 2rem;">
-    <h1>Marisa Varela</h1>
+    <h1></h1>
   </header>
 
  <section style="margin-bottom: 3rem; text-align: left;">
