--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Home Page
          margin-right: 1.5rem;
          box-shadow: 0 0 12px rgba(0,0,0,0.25);
        ">
-  <p style="margin-top: 1rem;">About Section</p>
+  <p style="margin-top: 1rem;">While exploring the quiet bay at sunset, a quirky fox jumped over zigzagging driftwood as waves mixed gently with the breeze. Nearby, adventurous hikers buzzed with excitement, packing their backpacks with cozy quilts and snacks before heading off on a relaxed journey up the hazy mountain trail.”</p>
 </section>
 
 
