--- a/resume.html
+++ b/resume.html
@@ -7,19 +7,21 @@ title: Resume
 
   <!-- Page Header -->
   <header style="text-align: center; margin-bottom: 2rem;">
-    <h1>PAGE TITLE HERE</h1>
-    <p><em>Brief description of what this page will showcase</em></p>
+    <h1>Resume</h1>
   </header>
 
   <!-- Navigation Breadcrumb -->
   <nav style="margin-bottom: 2rem;">
     <a href="{{ '/' | relative_url }}">Home</a> &rarr;
-    <strong>PAGE TITLE HERE</strong>
+    <strong>Resume</strong>
   </nav>
 
-  <!-- Page Content -->
-  <section>
-    <p>This is a placeholder for content.</p>
+  <!-- Resume PDF Embed -->
+  <section style="margin-top: 2rem; text-align:center;">
+    <iframe 
+      src="{{ '/assets/Marisa Varela_Resume.pdf' | relative_url }}" 
+      style="width: 100%; height: 900px; border: none; box-shadow: 0 0 12px rgba(0,0,0,0.2);">
+    </iframe>
   </section>
 
   <!-- Footer -->
