--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@ title: Resume
   <!-- Page Header -->
   <header style="text-align: center; margin-bottom: 2rem;">
     <h1>Resume</h1>
+    <p><em>View my professional resume below</em></p>
   </header>
 
   <!-- Navigation Breadcrumb -->
@@ -18,10 +19,10 @@ title: Resume
 
   <!-- Resume PDF Embed -->
   <section style="margin-top: 2rem; text-align:center;">
-    <iframe 
+    <embed 
       src="{{ '/assets/Marisa Varela_Resume.pdf' | relative_url }}" 
-      style="width: 100%; height: 900px; border: none; box-shadow: 0 0 12px rgba(0,0,0,0.2);">
-    </iframe>
+      type="application/pdf" 
+      style="width: 100%; height: 900px; box-shadow: 0 0 12px rgba(0,0,0,0.2);">
   </section>
 
   <!-- Footer -->
