--- a/resume.html
+++ b/resume.html
@@ -17,12 +17,17 @@ title: Resume
     <strong>Resume</strong>
   </nav>
 
-  <!-- Resume PDF Embed -->
-  <section style="margin-top: 2rem; text-align:center;">
-    <embed 
-      src="{{ '/assets/Marisa Varela_Resume.pdf' | relative_url }}" 
-      type="application/pdf" 
-      style="width: 100%; height: 900px; box-shadow: 0 0 12px rgba(0,0,0,0.2);">
+  <!-- Resume Images -->
+  <section style="margin-top: 2rem; display: flex; flex-direction: column; align-items: center; gap: 2rem;">
+    <img 
+      src="{{ 'assets/images/MarisaVarelaResumePage1.jpg' | relative_url }}" 
+      alt="Resume Page 1" 
+      style="width: 100%; max-width: 800px; box-shadow: 0 0 12px rgba(0,0,0,0.2); border-radius: 8px;">
+
+    <img 
+      src="{{ 'assets/images/MarisaVarelaResumePage2.jpg' | relative_url }}" 
+      alt="Resume Page 2" 
+      style="width: 100%; max-width: 800px; box-shadow: 0 0 12px rgba(0,0,0,0.2); border-radius: 8px;">
   </section>
 
   <!-- Footer -->
