--- a/infographics.html
+++ b/infographics.html
@@ -24,7 +24,7 @@ title: Infographics
     <div style="text-align: center; width: 100%;">
       <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
         <img 
-          src="{{ 'assets/images/FEMADocPage1.png | relative_url }}" 
+          src="{{ 'assets/images/FEMADocPage1.png' | relative_url }}" 
           alt="Infographic Page 1" 
           style="width: 100%; max-width: 395px; box-shadow: 0 0 12px rgba(0,0,0,0.2); border-radius: 8px;">
 
