--- a/publishedWorks.html
+++ b/publishedWorks.html
@@ -1,25 +1,30 @@
 ---
 layout: default
-title: Published Work
+title: Published Works
 ---
 
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
 
   <!-- Page Header -->
   <header style="text-align: center; margin-bottom: 2rem;">
-    <h1>PAGE TITLE HERE</h1>
-    <p><em>Brief description of what this page will showcase</em></p>
+    <p><em>Collection of publications.</em></p>
   </header>
 
   <!-- Navigation Breadcrumb -->
   <nav style="margin-bottom: 2rem;">
     <a href="{{ '/' | relative_url }}">Home</a> &rarr;
-    <strong>PAGE TITLE HERE</strong>
+    <strong>Published Works</strong>
   </nav>
 
-  <!-- Page Content -->
-  <section>
-    <p>This is a placeholder for content.</p>
+  <!-- PDF Section with Description -->
+  <section style="margin-top: 2rem; text-align: center;">
+    <p style="margin-bottom: 1rem; font-size: 1.05rem;">
+      Explain what the file is. 
+    </p>
+    <iframe 
+      src="{{ 'assets/climate.pdf' | relative_url }}" 
+      style="width: 100%; height: 900px; border: none; box-shadow: 0 0 12px rgba(0,0,0,0.2);">
+    </iframe>
   </section>
 
   <!-- Footer -->
