--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@ title: Home Page
   </section>
 
   <!-- Footer -->
-  <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#777;">
-    <p>&copy; 2025 Marisa Varela. All rights reserved.</p>
-  </footer>
+<footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:white; 
+               background: linear-gradient(135deg, #7b5cf5, #c084fc); 
+               padding: 1rem 0; border-radius: 8px;">
+  <p>&copy; 2025 Marisa Varela. All rights reserved.</p>
+</footer>
 
 </main>
