--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@ title: Home Page
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
 
   <!-- Header -->
- <header style="text-align: center; margin-bottom: 2rem; 
-               padding: 1.5rem 0; 
-               background: linear-gradient(135deg, #7b5cf5, #c084fc); 
-               border-radius: 8px;">
-  <h1 style="color: white; margin: 0;">PAGE TITLE HERE</h1>
-  <p style="color: #f0e7ff; margin-top: 0.5rem; font-style: italic;">Brief description of what this page will showcase</p>
-</header>
-
+  <header style="text-align: center; margin-bottom: 2rem;">
+    <h1></h1>
+  </header>
 
  <section style="margin-bottom: 3rem; text-align: left;">
   <img src="{{ '/assets/images/ProfilePicture.jpeg' | relative_url }}" 
