--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ title: Home Page
   </section>
 
   <!-- Footer -->
-<footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:white; 
-               background: linear-gradient(135deg, #7b5cf5, #c084fc); 
-               padding: 1rem 0; border-radius: 8px;">
+<footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#9e7cc1; 
+               background: linear-gradient(135deg, #d9bfff, #ffc6de); 
+               padding: 1rem 0; border-radius: 8px; box-shadow: 0 -3px 8px rgba(0,0,0,0.05);">
   <p style="margin: 0;">&copy; 2025 Marisa Varela. All rights reserved.</p>
 </footer>
 
