--- a/resume.html
+++ b/resume.html
@@ -25,8 +25,10 @@ title: Resume
   </section>
 
   <!-- Footer -->
-  <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#777;">
-    <p>&copy; 2025 Marisa Varela. All rights reserved.</p>
-  </footer>
+<footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#9e7cc1; 
+               background: linear-gradient(135deg, #d9bfff, #ffc6de); 
+               padding: 1rem 0; border-radius: 8px; box-shadow: 0 -3px 8px rgba(0,0,0,0.05);">
+  <p style="margin: 0;">&copy; 2025 Marisa Varela. All rights reserved.</p>
+</footer>
 
 </main>
