--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@ title: Home Page
     <h1></h1>
   </header>
 
- <section style="margin-bottom: 3rem; text-align: left;">
+ <section style="margin-bottom: 3rem; text-align: left; overflow: hidden;">
   <img src="{{ '/assets/images/ProfilePicture.jpeg' | relative_url }}" 
        alt="Marisa Varela" 
        style="
          width: 220px;
          height: 220px;
          object-fit: cover;
-         object-position: center -20px;
+         object-position: center -15px;
          border-radius: 50%;
          float: left;
          margin-right: 1.5rem;
-         box-shadow: 0 0 12px rgba(0,0,0,0.25);
-       ">
-  <p style="margin-top: 1rem;">While exploring the quiet bay at sunset, a quirky fox jumped over zigzagging driftwood as waves mixed gently with the breeze. Nearby, adventurous hikers buzzed with excitement, packing their backpacks with cozy quilts and snacks before heading off on a relaxed journey up the hazy mountain trail.”</p>
+         box-shadow: 0 8px 20px rgba(0,0,0,0.2); /* more depth */
+         border: 3px solid rgba(255, 255, 255, 0.6); /* subtle outline */
+         transition: transform 0.3s ease, box-shadow 0.3s ease;
+       "
+       onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 12px 24px rgba(0,0,0,0.25)';"
+       onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.2)';">
+  <p style="margin-top: 1rem;">
+    While exploring the quiet bay at sunset, a quirky fox jumped over zigzagging driftwood as waves mixed gently with the breeze. Nearby, adventurous hikers buzzed with excitement, packing their backpacks with cozy quilts and snacks before heading off on a relaxed journey up the hazy mountain trail.
+  </p>
 </section>
 
 
