--- a/infographics.html
+++ b/infographics.html
@@ -7,8 +7,7 @@ title: Infographics
 
   <!-- Page Header -->
   <header style="text-align: center; margin-bottom: 2rem;">
-    <h1>Infographics</h1>
-    <p><em>Discrtiption of page/em></p>
+    <p><em>Discrtiption of page</p>
   </header>
 
   <!-- Navigation Breadcrumb -->
