--- a/infographics.html
+++ b/infographics.html
@@ -5,16 +5,16 @@ title: Infographics
 
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
 
-  <!-- Page Header -->
-  <header style="text-align: center; margin-bottom: 2rem;">
-    <p><em>Discrtiption of page</p>
-  </header>
-
   <!-- Navigation Breadcrumb -->
   <nav style="margin-bottom: 2rem;">
     <a href="{{ '/' | relative_url }}">Home</a> &rarr;
     <strong>Infographics</strong>
   </nav>
+
+  <!-- Page Header / Description -->
+  <header style="text-align: center; margin-bottom: 2rem;">
+    <p><em>Description of page</em></p>
+  </header>
 
   <!-- Infographic Section -->
   <section style="margin-top: 2rem; display: flex; flex-direction: column; align-items: center; gap: 2.5rem;">
