--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@ title: Home Page
   </div>
 
   <p style="margin-top: 0;">
-    While exploring the quiet bay at sunset, a quirky fox jumped over zigzagging driftwood as waves mixed gently with the breeze. Nearby, adventurous hikers buzzed with excitement, packing their backpacks with cozy quilts and snacks before heading off on a relaxed journey up the hazy mountain trail.
+    Hi, I’m Marisa! I have a background in anthropology and customer service, with 8 years of experience in communications and technical writing for federal, public, and private organizations.
+
+For the last 4 years, I have worked alongside FEMA staff to support FEMA’s presence at events such as Climate Week NYC as well as the 28th and 29th UN Climate Change Conferences. I have had my hand in developing FEMA strategic plans, climate resources for emergency managers, and briefing materials for US representatives.
+
+My work has contributed to the award of contracts valuing over $13.7 million, with the largest portfolio increasing by 121%.
+
+I’ve supported numerous cross-cutting teams and working groups in synthesizing a wide range of products for internal and external audiences alike. I’ve managed the development and maintenance of web pages, regional engagements, and operating procedures.
   </p>
 </section>
 
