--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@ I’ve supported numerous cross-cutting teams and working groups in synthesizing
 
 
   <!-- Writing Samples Section -->
-  <section style="text-align: center; margin-bottom: 2rem; margin-top: 2rem;">
-    <h2>Writing Samples</h2>
+ <!-- Writing Samples Section -->
+<section style="text-align: center; margin-bottom: 2rem; margin-top: 1rem;">
+  <h2>Writing Samples</h2>
 
-    <!-- Sub-tabs under Writing Samples -->
-    <ul style="list-style: none; padding: 0; margin-top: 1.5rem; line-height: 2;">
-      <li>
-        <a href="{{ '/academicWriting.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
-          Academic Writing
-        </a>
-      </li>
+  <ul style="list-style: none; padding: 0; margin-top: 1.5rem; line-height: 2;">
+    <li>
+      <a href="{{ '/academicWriting.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
+        Academic Writing
+      </a>
+    </li>
 
       <li>
         <a href="{{ '/publishedWorks.html' | relative_url }}" style="text-decoration: none; color:#0066cc;">
@@ -77,7 +77,6 @@ I’ve supported numerous cross-cutting teams and working groups in synthesizing
         </a>
       </li>
     </ul>
-  </section>
 
   <!-- Footer -->
 <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#9e7cc1; 
