--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ I’ve supported numerous cross-cutting teams and working groups in synthesizing
 </section>
 
 
-  <!-- Resume Section -->
-<section style="text-align: center; margin-top: 4rem; margin-bottom: 4rem;">
+<!-- Resume Section -->
+<section style="text-align: center; margin-top: 4rem; margin-bottom: 1rem;">
   <h2>Resume</h2>
   <ul style="list-style: none; padding: 0; margin-top: 1rem; line-height: 2;">
     <li>
@@ -52,10 +52,8 @@ I’ve supported numerous cross-cutting teams and working groups in synthesizing
   </ul>
 </section>
 
-
-  <!-- Writing Samples Section -->
- <!-- Writing Samples Section -->
-<section style="text-align: center; margin-bottom: 2rem; margin-top: 1rem;">
+<!-- Writing Samples Section -->
+<section style="text-align: center; margin-bottom: 2rem; margin-top: 0rem;">
   <h2>Writing Samples</h2>
 
   <ul style="list-style: none; padding: 0; margin-top: 1.5rem; line-height: 2;">
@@ -77,7 +75,7 @@ I’ve supported numerous cross-cutting teams and working groups in synthesizing
         </a>
       </li>
     </ul>
-
+</section>
   <!-- Footer -->
 <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#9e7cc1; 
                background: linear-gradient(135deg, #d9bfff, #ffc6de); 
