--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@ title: Home Page
   </header>
 
 <section style="margin-bottom: 3rem; text-align: left;">
-  <div style="float: left; margin-right: 1.5rem;">
+  <div style="
+    display: flex;
+    align-items: flex-start;
+    gap: 2rem;
+  ">
     <img src="{{ '/assets/images/ProfilePicture.jpeg' | relative_url }}" 
          alt="Marisa Varela" 
          style="
@@ -26,19 +30,18 @@ title: Home Page
          "
          onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 16px 32px rgba(0,0,0,0.3)';"
          onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 12px 24px rgba(0,0,0,0.25)';">
+
+    <p style="margin: 0; line-height: 1.8;">
+      Hi, I’m Marisa! I have a background in anthropology and customer service, with 8 years of experience in communications and technical writing for federal, public, and private organizations.<br><br>
+
+      For the last 4 years, I have worked alongside FEMA staff to support FEMA’s presence at events such as Climate Week NYC as well as the 28th and 29th UN Climate Change Conferences. I have had my hand in developing FEMA strategic plans, climate resources for emergency managers, and briefing materials for US representatives.<br><br>
+
+      My work has contributed to the award of contracts valuing over $13.7 million, with the largest portfolio increasing by 121%.<br><br>
+
+      I’ve supported numerous cross-cutting teams and working groups in synthesizing a wide range of products for internal and external audiences alike. I’ve managed the development and maintenance of web pages, regional engagements, and operating procedures.
+    </p>
   </div>
-
-  <p style="margin-top: 0;">
-    Hi, I’m Marisa! I have a background in anthropology and customer service, with 8 years of experience in communications and technical writing for federal, public, and private organizations.
-
-For the last 4 years, I have worked alongside FEMA staff to support FEMA’s presence at events such as Climate Week NYC as well as the 28th and 29th UN Climate Change Conferences. I have had my hand in developing FEMA strategic plans, climate resources for emergency managers, and briefing materials for US representatives.
-
-My work has contributed to the award of contracts valuing over $13.7 million, with the largest portfolio increasing by 121%.
-
-I’ve supported numerous cross-cutting teams and working groups in synthesizing a wide range of products for internal and external audiences alike. I’ve managed the development and maintenance of web pages, regional engagements, and operating procedures.
-  </p>
 </section>
-
 
 <!-- Resume Section -->
 <section style="text-align: center; margin-top: 4rem; margin-bottom: 1rem;">
