--- a/publishedWorks.html
+++ b/publishedWorks.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Professional (Published) Works
+title: Professional/Published Works
 ---
 
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
@@ -12,7 +12,7 @@ title: Professional (Published) Works
   <!-- Navigation Breadcrumb -->
   <nav style="margin-bottom: 2rem;">
     <a href="{{ '/' | relative_url }}">Home</a> &rarr;
-    <strong>Published Works</strong>
+    <strong>Professional/Published Works</strong>
   </nav>
 
   <!-- PDF Section with Description -->
